experience 영역 수정

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,4 +2,4 @@
 - company: SK Telecom
   position: 백엔드 서버 개발자
   duration: 2017.03 &mdash; Present
-  summary: T전화, T연락처, 클라우드베	<ul class="resume-item-list"><li>T전화</li><li>T연락처</li><li>사내 마케팅 관리툴</li></ul>
+  summary: T전화, T연락처, 클라우드베리 <ul class="resume-item-list"><li>T전화</li><li>T연락처</li><li>사내 마케팅 관리툴</li></ul>
