--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ resume_social_links:
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/jae-kwon-7a7615185"
   # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://https://tangoblog.tistory.com"
+  resume_website_url:           "https://tangoblog.tistory.com"
   #resume_medium_url:            "https://medium.com/@jglovier"
 resume_print_social_links:      true
 
